--- a/pikaron/slideweuni/composer.json
+++ b/pikaron/slideweuni/composer.json
@@ -10,7 +10,7 @@
 	"authors": [
 		{
 			"name": "Picaron",
-			"homepage": "https://www.ascensoristas.net",
+			"homepage": "https://github.com/picaronin",
 			"role": "Extension Developer"
 		}
 	],
