--- a/pikaron/slideweuni/composer.json
+++ b/pikaron/slideweuni/composer.json
@@ -1,11 +1,43 @@
 {
 	"name": "pikaron/slideweuni",
 	"type": "phpbb-extension",
-	"description": "This Extension give a Slider Carousel effect for jQuery in the header of the prosilver >= 3.2.5, we_universal >= 2.5.6, X-Creamy >= 1.0.9, Orange_BBEs >= 2.0.6, flat-style >= 1.0.6, elegance >= 3.2.3, Carbon >= 1.1.8, CleanSilver >= 1.0.1, Maxthon >= 2.0.3, Rock'n Roll >= 2.0.4, Black-Silver >= 1.1.9 (& Slim-Split), prosilver_se >= 3.2.5, cubes >= 1.0.2 and ne-blackgreen >= 3.6 templates replacing the existing banner. Supports up to 60 images to which an external link URL can optionally be associated. In order not to alter the initial design of the style, the recommended size of the images must be 2570px x 465px. All image types supported by the <img> HTML image element, are supported. The delay time for the transition is configurable, as well as the activation / deactivation of the extension. The loading images is done randomly. Slider effect and fade effect are included. All options are configurable from the ACP.",
-	"homepage": "https://www.phpbb.com/customise/db/extension/slideweuni/",
-	"version": "1.0.0",
-	"time": "2019-05-25",
-	"keywords": ["phpbb", "extension", "template", "we_universal", "prosilver", "X-Creamy", "Orange_BBEs", "flat-style", "elegance", "Carbon", "CleanSilver", "Maxthon", "Rock'n Roll", "cubes", "Black-Silver", "prosilver_se", "ne-blackgreen"],
+	"description": "This Extension give a Slider Carousel effect for jQuery in the header of the prosilver >= 3.2.5, we_universal >= 2.5.6, X-Creamy >= 1.0.9, Orange_BBEs >= 2.0.6, flat-style >= 1.0.6, elegance >= 3.2.3, Carbon >= 1.1.8, CleanSilver >= 1.0.1, Maxthon >= 2.0.3, Rock'n Roll >= 2.0.4, Black-Silver >= 1.1.9 (& Slim-Split), prosilver_se >= 3.2.5, cubes >= 1.0.2, proflat >= 1.2.8, pro_ubuntu_lucid >= 2.0.5 and ne-blackgreen >= 3.6 templates replacing the existing banner. Supports up to 60 images to which an external link URL can optionally be associated. In order not to alter the initial design of the style, the recommended size of the images must be 2570px x 465px. All image types supported by the <img> HTML image element, are supported. The delay time for the transition is configurable, as well as the activation / deactivation of the extension. The loading images is done randomly. Slider effect and fade effect are included. All options are configurable from the ACP.",
+	"homepage": "https://www.phpbb-es.com/foro/viewtopic.php?f=147&t=42139",
+	"version": "1.3.0",
+	"time": "2019-07-12",
+	"keywords": [
+		"phpbb",
+		"extension",
+		"template",
+		"X-Creamy",
+		"Black-Silver",
+		"Black-Silver-Slim",
+		"Black-Silver-Split",
+		"Carbon",
+		"CleanSilver",
+		"cubes",
+		"elegance",
+		"elegance_aqua",
+		"elegance_green",
+		"elegance_lightblue",
+		"elegance_softblue",
+		"elegance_softgreen",
+		"elegance_steelblue",
+		"flat-style",
+		"maxthon",
+		"ne-blackgreen",
+		"Orange_BBEs",
+		"proflat",
+		"proflat_green",
+		"proflat_grey",
+		"proflat_orange",
+		"proflat_red",
+		"prosilver",
+		"prosilver_se",
+		"pro_ubuntu_lucid",
+		"rockn_roll",
+		"we_universal"
+	],
 	"license": "GPL-2.0-only",
 	"authors": [
 		{
@@ -15,8 +47,9 @@
 		}
 	],
 	"require": {
-		"php": ">=5.4",
-		"phpbb/phpbb": ">=3.2.4"
+		"php": ">=5.6.0",
+		"phpbb/phpbb": ">=3.2.4",
+		"composer/installers": "~1.0.0"
 	},
 	"extra": {
 		"display-name": "Slideshow for Header",
