--- a/pikaron/slideweuni/config/tables.yml
+++ b/pikaron/slideweuni/config/tables.yml
@@ -1,2 +1,2 @@
 parameters:
-    pikaron.slideweuni.table.slideweuni: %core.table_prefix%slideweuni
+    pikaron.slideweuni.table.slideweuni: '%core.table_prefix%slideweuni'
