Add Template rain_forest 1.1.3

--- a/pikaron/slideweuni/composer.json
+++ b/pikaron/slideweuni/composer.json
@@ -36,8 +36,8 @@
 		"prosilver_se",
 		"pro_ubuntu_lucid",
 		"rockn_roll",
-		"we_universal"
-        "rain_forest"
+		"we_universal",
+        "rain_forest",
         "PS4 Pro"
 	],
 	"license": "GPL-2.0-only",
